--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="valid.js"></script>
+    <script src="../jss/valid.js"></script>
+    <script src="../jss/addRow.js"></script>
     <style>
         body {
             background-color: azure;
@@ -19,7 +20,7 @@
 <div class="container">
     <h2>Заполните поля</h2>
     <h4>для добавления нового кандидата</h4>
-    <form class="Кандидат" action="/action_page.php">
+    <form class="Кандидат">
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Name:</label>
             <div class="col-sm-10">
@@ -68,6 +69,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" onclick="return validate();">Submit</button>
+                <button type="submit" class="btn btn-default" onclick="return addRow();">Add Row</button>
             </div>
         </div>
     </form>
@@ -75,7 +77,7 @@
 
 <div class="container">
     <h2>Текущие кандидаты</h2>
-    <table class="table">
+    <table class="table" id="t1">
         <thead>
         <tr>
             <th>Name</th>
