--- a/src/main/webapp/index2.html
+++ b/src/main/webapp/index2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="../jss/valid.js"></script>
+<!--    <script src="../jss/valid.js"></script>-->
     <script src="../jss/addRow.js"></script>
     <style>
         body {
@@ -20,13 +20,17 @@
 <div class="container">
     <h2>Заполните поля</h2>
     <h4>для добавления нового кандидата</h4>
-    <form class="Кандидат">
+    <div class="container">
+
+    <form  data-toggle="validator" role="form" class="Кандидат">
+        <!--//обращаемсья к #name-->
         <div class="form-group">
             <label class="control-label col-sm-2" for="name">Name:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
+                <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
             </div>
         </div>
+
         <div class="form-group">
             <label class="control-label col-sm-2" for="email">Email:</label>
             <div class="col-sm-10">
@@ -66,82 +70,18 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
                 <button type="submit" class="btn btn-default" onclick="return validate();">Submit</button>
                 <button type="submit" class="btn btn-default" onclick="return addRow();">Add Row</button>
             </div>
-        </div>
+
     </form>
+    </div>
 </div>
-
-<div class="container">
-
-
-    <form data-toggle="validator" role="form">
-        <div class="form-group">
-            <label for="inputName" class="control-label">Name</label>
-            <input type="text" class="control-label col-sm-2" id="inputName" placeholder="Cina Saffary" required>
-        </div>
-        <div class="form-group has-feedback">
-            <label for="inputTwitter" class="control-label">Twitter</label>
-            <div class="input-group">
-                <span class="input-group-addon">@</span>
-                <input type="text" pattern="^[_A-z0-9]{1,}$" maxlength="15" class="form-control" id="inputTwitter" placeholder="1000hz" required>
-            </div>
-            <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-            <div class="help-block with-errors">Hey look, this one has feedback icons!</div>
-        </div>
-        <div class="form-group">
-            <label for="inputEmail" class="control-label">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email" data-error="Bruh, that email address is invalid" required>
-            <div class="help-block with-errors"></div>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword" class="control-label">Password</label>
-            <div class="form-inline row">
-                <div class="form-group col-sm-6">
-                    <input type="password" data-minlength="6" class="form-control" id="inputPassword" placeholder="Password" required>
-                    <div class="help-block">Minimum of 6 characters</div>
-                </div>
-                <div class="form-group col-sm-6">
-                    <input type="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword" data-match-error="Whoops, these don't match" placeholder="Confirm" required>
-                    <div class="help-block with-errors"></div>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="radio">
-                <label>
-                    <input type="radio" name="underwear" required>
-                    Boxers
-                </label>
-            </div>
-            <div class="radio">
-                <label>
-                    <input type="radio" name="underwear" required>
-                    Briefs
-                </label>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" id="terms" data-error="Before you wreck yourself" required>
-                    Check yourself
-                </label>
-                <div class="help-block with-errors"></div>
-            </div>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
-
-
-
-
-</div>
+<!-- -&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;-->
 
 <div class="container">
     <h2>Текущие кандидаты</h2>
