check with radio button

--- a/src/main/webapp/avtoriz.html
+++ b/src/main/webapp/avtoriz.html
@@ -72,7 +72,16 @@
                 </div>
             </div>
 
-            <!--// email обращаемсья к # -->
+<!--            <div>-->
+<!--                <label class="control-label col-sm-2" for="male">Sex:</label></br>-->
+<!--                <input type="radio" id="male" name="sex">Male</br>-->
+<!--                <label class="control-label col-sm-2" for="female"></label>-->
+<!--                <input type="radio" id="female" name="sex">Female</br>-->
+<!--            </div>-->
+
+
+
+            <!--// email обращаемсья  к document.getElementsByName("sex") # -->
             <div class="form-group">
                 <label for="inputPassword" class="control-label">Sex:</label>
 
@@ -98,7 +107,8 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary" onclick="return addUser();">Submit</button>
+<!--                <button type="submit" class="btn btn-primary" onclick="return addUser();">Submit</button>-->
+                <button type="submit" class="btn btn-primary" onclick="return addRow2();">Submit</button>
             </div>
         </form>
     </div>
