как передать в arr

--- a/src/main/webapp/avtoriz.html
+++ b/src/main/webapp/avtoriz.html
@@ -15,10 +15,16 @@
     </style>
         <script>
         function addUser() {
+            var send = {
+                'inputName': $('#inputName').val(),
+                'inputDescription': $('#inputDescription').val(),
+                'inputEmail': $('#inputEmail').val(),
+                'inputPassword': $('#inputPassword').val()
+            };
             $.ajax({
                 type: 'GET',
                 url: 'http://localhost:8081/dreamjob/autoRegBoot',
-                data: 'inputName=' + $('#inputName').val(),
+                data:  {send:send},
                 dataType: 'text'
             }).done(function (data) {
                 $('#t2 tr:last').after(data);
@@ -72,15 +78,6 @@
                 </div>
             </div>
 
-<!--            <div>-->
-<!--                <label class="control-label col-sm-2" for="male">Sex:</label></br>-->
-<!--                <input type="radio" id="male" name="sex">Male</br>-->
-<!--                <label class="control-label col-sm-2" for="female"></label>-->
-<!--                <input type="radio" id="female" name="sex">Female</br>-->
-<!--            </div>-->
-
-
-
             <!--// email обращаемсья  к document.getElementsByName("sex") # -->
             <div class="form-group">
                 <label for="inputPassword" class="control-label">Sex:</label>
@@ -108,7 +105,7 @@
             </div>
             <div class="form-group">
 <!--                <button type="submit" class="btn btn-primary" onclick="return addUser();">Submit</button>-->
-                <button type="submit" class="btn btn-primary" onclick="return addRow2();">Submit</button>
+                <button type="submit" class="btn btn-primary" onclick="return addUser();">Submit</button>
             </div>
         </form>
     </div>
